# cpp-mini-shell

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: setup.sh
src/: main.cpp
